--- a/src/app/quizzes/quiz/quiz.component.html
+++ b/src/app/quizzes/quiz/quiz.component.html
@@ -4,7 +4,9 @@
       {{quiz.name}}
     </h2>
   <span> Theme: {{quiz.theme}} </span>
-  <i *ngIf="quiz.theme === 'Le Football'" class="fas fa-futbol"> </i><br>
-  <span> <i>Nombre de questions: {{quiz.questions.length}}</i></span>
+  <i *ngIf="quiz.theme === 'Le Football'" class="fas fa-futbol"> </i>
+  <i *ngIf="quiz.theme === 'Acteurs'" class="fas fa-video"> </i><br>
+  <span> <i *ngIf="quiz.questions">Nombre de questions: {{quiz.questions.length}}</i></span><br>
     <button class="button-card" (click)="selectQuiz()">Select</button>
+  <button class="button-card" (click)="deleteQuiz()">delete</button>
 </div>
