--- a/src/app/quizzes/quiz/quiz.component.html
+++ b/src/app/quizzes/quiz/quiz.component.html
@@ -3,10 +3,12 @@
         <i class="fab fa-leanpub"></i>
       {{quiz.name}}
     </h2>
-  <span> Theme: {{quiz.theme}} </span>
-  <i *ngIf="quiz.theme === 'Le Football'" class="fas fa-futbol"> </i>
-  <i *ngIf="quiz.theme === 'Acteurs'" class="fas fa-video"> </i><br>
-  <span> <i *ngIf="quiz.questions">Nombre de questions: {{quiz.questions.length}}</i></span><br>
+  <span> Theme: {{quiz.theme}}
+       <i *ngIf="themeByIcon[quiz.theme] !== undefined" [ngClass]="themeByIcon[quiz.theme]"></i>
+  </span>
+  <br>
+  <span> <i *ngIf="quiz.creationDate !== undefined">Date de création: {{quiz.creationDate}}</i></span><br>
+  <span> <i *ngIf="quiz.questions !== undefined && quiz.questions.length !== 0">Nombre de questions: {{quiz.questions.length}}</i></span><br>
     <button class="button-card" (click)="selectQuiz()">Select</button>
-  <button class="button-card" (click)="deleteQuiz()">delete</button>
+    <button type="button" class="button-card_2" (click)="deleteQuiz()">Delete</button>
 </div>
